--- a/taglist.html
+++ b/taglist.html
@@ -3,7 +3,7 @@ title: Monty Python Tag List
 layout: page
 ---
 {% assign rawtags = "" %}
-{% for page in site.pages %}
+{% for page in site.sketches %}
 	{% assign ttags = page.tags | join:'|' | append:'|' %}
 	{% assign rawtags = rawtags | append:ttags %}
 {% endfor %}
