--- a/taglist.html
+++ b/taglist.html
@@ -39,7 +39,7 @@ layout: page
 	 {% for sketch in site.sketches %}
 			{% if sketch.tags contains tag %}
 			<div class="entries-{{ page.entries_layout | default: 'list' }}">
-				<a href="{{ sketch.url }}">{{ sketch.title }}</a>
+				<a href="{{ site.url}}{{ sketch.url }}">{{ sketch.title }}</a>
 			</div>
 			{% endif %}
 	 {% endfor %}
